--- a/ubi/Containerfile
+++ b/ubi/Containerfile
@@ -25,7 +25,8 @@ COPY --chown=1001:0 requirements.txt ./
 # (all commands are chained to minimize layer size)
 RUN echo "Installing softwares and packages" && \
     # Install Python packages \
-    pip install --no-cache-dir -r requirements.txt && \
+    #pip install --no-cache-dir -r requirements.txt && \
+    python3 -m pip install --no-cache-dir -r requirements.txt \
     # Fix permissions to support pip in Openshift environments \
     chmod -R g+w /opt/app-root/lib/python3.11/site-packages && \
     fix-permissions /opt/app-root -P
