--- a/jupyter notebook/requirements-jupyter.txt
+++ b/jupyter notebook/requirements-jupyter.txt
@@ -35,11 +35,12 @@ decorator==5.1.1; python_version >= '3.5'
 defusedxml==0.7.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
 deprecated==1.2.14; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 deprecation==2.1.0
-dill==0.3.7; python_version >= '3.11'
+dill==0.3.7; python_version < '3.11'
 docstring-parser==0.15; python_version >= '3.6' and python_version < '4.0'
 docstring-to-markdown==0.12; python_version >= '3.6'
 elyra[kfp-tekton]==3.15.0; python_version >= '3.8'
 entrypoints==0.4; python_version >= '3.6'
+exceptiongroup==1.1.3; python_version < '3.11'
 executing==1.2.0
 fastjsonschema==2.18.0
 fire==0.5.0
@@ -59,7 +60,7 @@ google-resumable-media==2.6.0; python_version >= '3.7'
 googleapis-common-protos==1.60.0; python_version >= '3.7'
 httplib2==0.22.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 idna==3.4; python_version >= '3.5'
-importlib-metadata==6.8.0; python_version >= '3.8'
+importlib-metadata==6.8.0; python_version < '3.10'
 ipykernel==6.25.2; python_version >= '3.8'
 ipython==8.15.0; python_version >= '3.9'
 ipython-genutils==0.2.0
@@ -183,7 +184,7 @@ termcolor==2.3.0; python_version >= '3.7'
 terminado==0.17.1; python_version >= '3.7'
 textwrap3==0.9.2
 tinycss2==1.2.1; python_version >= '3.7'
-tomli==2.0.1; python_version >= '3.7'
+tomli==2.0.1; python_version < '3.11'
 tomlkit==0.12.1; python_version >= '3.7'
 tornado==6.3.3; python_version >= '3.8'
 tqdm==4.66.1; python_version >= '3.7'
